Refactoring and clean code

--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
   <meta charset="utf-8">
-  <title>Bike Race</title>
+  <title>Classement VTT</title>
 </head>
 <body>
-  <noscript>Vous devez activer Javascript sur votre nagigateur Web.</noscript>
-  <div id="root"></div>
+  <noscript>Vous devez activer Javascript sur votre navigateur Web.</noscript>
+  <div id="app"></div>
 </body>
 </html>
